--- a/Style.css
+++ b/Style.css
@@ -12,3 +12,42 @@ body{
     color: var(--tg-theme-text-color);
     background: var(--tg-theme-bg-color);
 }
+
+#main{
+    width: 100%;
+    padding: 20px;
+    text-align: center;
+}
+
+h1{
+    margin-top: 50px;
+    margin-botton: 10px;
+}
+
+img{
+    width: 70px;
+    margin: 30px auto;
+}
+
+p{
+    width: 350px;
+    margin: 0 auto;
+}
+
+button{
+    border: 0;
+    border-radius: 5px;
+    margin-top: 50px;
+    height: 60px;
+    width: 200px;
+    font-size: 20px;
+    font-weight 500;
+    cursor: pointer;
+    transition: all 500ms ease;
+    color: var(--tg-theme-button-color);
+    background: var(--tg-thene-button-text-color);
+}
+
+button:hover{
+    background: var(--th-theme-secondary-bg-color);
+}
